--- a/projects/page-builder/src/lib/config-dialog/config-dialog.component.html
+++ b/projects/page-builder/src/lib/config-dialog/config-dialog.component.html
@@ -3,23 +3,27 @@
   <p>Configure your settings below:</p>
   <p>Page size: {{ configs.size }}</p>
   <div class="box-list">
-    @for(size of sizeList;track $index){
-    <div class="box {{ size }}" [class.active]="size == configs.size" (click)="configs.size = size">
-      {{ size }}
-    </div>
+    @for (size of sizeList; track $index) {
+      <div
+        class="box {{ size }}"
+        [class.active]="size == configs.size"
+        (click)="configs.size = size"
+      >
+        {{ size }}
+      </div>
     }
   </div>
 
   <p>Orientation: {{ configs.orientation }}</p>
   <div class="box-list">
-    @for(orientation of orientationList;track $index){
-    <div
-      class="box {{ orientation }}"
-      [class.active]="orientation == configs.orientation"
-      (click)="configs.orientation = orientation"
-    >
-      {{ orientation }}
-    </div>
+    @for (orientation of orientationList; track $index) {
+      <div
+        class="box {{ orientation }}"
+        [class.active]="orientation == configs.orientation"
+        (click)="configs.orientation = orientation"
+      >
+        {{ orientation }}
+      </div>
     }
   </div>
 </mat-dialog-content>
