fix bug print landscape

--- a/projects/page-builder/src/lib/page-preview/page-preview.component.html
+++ b/projects/page-builder/src/lib/page-preview/page-preview.component.html
@@ -1,5 +1,5 @@
 <div
-  class="ngx-page-builder paper {{ data.config.size }} {{ data.config.orientation }}"
+  class="ngx-page-builder paper {{ data?.config?.size }} {{ data?.config?.orientation }}"
   [class.is-print-page]="isPrintPage"
   #paper
 ></div>
