create setting for custom component

--- a/projects/page-builder/src/components/block-properties/block-properties.component.html
+++ b/projects/page-builder/src/components/block-properties/block-properties.component.html
@@ -1,5 +1,4 @@
 <div class="inner">
-  <p>Properties</p>
   @if (item) {
     <p>{{ item.tag }}</p>
     <p>{{ item.id }}</p>
@@ -41,6 +40,6 @@
       <textcss-control [(ngModel)]="item" (change)="onChangeProperties()"></textcss-control>
     </details>
   } @else {
-    <p>None selected block</p>
+    <p>None selected block.</p>
   }
 </div>
