--- a/projects/demo/src/app/custom-source/chart/chart.component.html
+++ b/projects/demo/src/app/custom-source/chart/chart.component.html
@@ -1,7 +1,7 @@
 <highcharts-chart
-  [options]="chartOptions"
+  [options]="chartService.chartOptions"
   (chartInstance)="onLoad($event)"
   style="width: 100%; display: block"
 ></highcharts-chart>
 
-<button (click)="UpdateChart()">Update chart</button>
+<button (click)="updateData()">Update chart</button>
