save additional data from custom component

--- a/projects/demo/src/app/custom-source/chart/chart-setting/chart-setting.component.html
+++ b/projects/demo/src/app/custom-source/chart/chart-setting/chart-setting.component.html
@@ -1,7 +1,7 @@
 <p>Title</p>
 <input
   type="text"
-  [(ngModel)]="chartService.chartTitle"
+  [(ngModel)]="chartService.myConfig.title"
   #chartTitleInput="ngModel"
-  (change)="updateChart()"
+  (change)="update()"
 />
