--- a/projects/page-builder/src/components/block-settings/block-settings.component.html
+++ b/projects/page-builder/src/components/block-settings/block-settings.component.html
@@ -1,8 +1,8 @@
 <div class="inner">
   <p>{{ item?.tag }}</p>
-  @if (item && item.customComponent && item.customComponent.componentSettings) {
+  @if (item && item.customComponent && settingComponent) {
     <ng-container
-      [ngComponentOutlet]="item.customComponent.componentSettings"
+      [ngComponentOutlet]="settingComponent"
       [ngComponentOutletInjector]="item.customComponent.compInjector"
     ></ng-container>
   } @else {
