- change dynamic data structure - set datasource for item collection

--- a/projects/page-builder/src/components/block-selector/block-selector.component.html
+++ b/projects/page-builder/src/components/block-selector/block-selector.component.html
@@ -19,7 +19,7 @@
         />
       </svg> -->
       </button>
-      <span class="tag">{{ item.tag ? item.tag : item.componentKey }}</span>
+      <span class="tag">{{ item.tag ? item.tag : item.customComponent?.componentKey }}</span>
       <span class="id">{{ item.id }}</span>
     </div>
   </div>
