refactor: enhance collection item component and related services
- Introduced template handling in CollectionItemComponent for dynamic rendering.
- Updated data binding and event handling in collection settings.
- Improved change detection logic in PageBuilderService.
- Added new ItemGeneratorComponent for rendering templates.
- Refactored data structure in PageItem to support templates and parent-child relationships.
- Enhanced styling for better UI presentation in collection settings and item generator.

--- a/projects/page-builder/src/lib/page-builder.scss
+++ b/projects/page-builder/src/lib/page-builder.scss
@@ -117,3 +117,22 @@
   max-height: calc(100vh - var(--topbar-height));
   overflow: auto;
 }
+
+.ngx-page-alert {
+  color: #303030;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 10px;
+  &.danger {
+    background: #ff000057;
+    border: 2px #ff7878 solid;
+  }
+  &.sucess {
+    background: #00ff0057;
+    border: 2px #78ff78 solid;
+  }
+  &.info {
+    background: #0000ff57;
+    border: 2px #7878ff solid;
+  }
+}
