--- a/projects/page-builder/src/sources/collection-item/collection-item.component.scss
+++ b/projects/page-builder/src/sources/collection-item/collection-item.component.scss
@@ -1,3 +1,15 @@
 :host {
   display: block;
 }
+
+.collection-container {
+  display: flex;
+  padding: 12px 0;
+  position: relative;
+  gap: 10px;
+  padding: 10px;
+  item-generator {
+    flex: auto;
+    display: block;
+  }
+}
