--- a/projects/page-builder/src/sources/collection-item/collection-settings/collection-settings.component.html
+++ b/projects/page-builder/src/sources/collection-item/collection-settings/collection-settings.component.html
@@ -1,22 +1,30 @@
 <p>Collection settings</p>
 
-<select [(ngModel)]="settings.id" name="datasource" (change)="update()">
-  @for (item of dynamicDataService.dynamicData; track item.id) {
-    <option [value]="item.id">{{ item.displayName }}</option>
-  }
-</select>
-
-<input
-  type="number"
-  [(ngModel)]="settings.skipCount"
-  name="skipCount"
-  placeholder="skip count"
-  (change)="update()"
-/>
-<input
-  type="number"
-  [(ngModel)]="settings.maxResultCount"
-  name="maxResultCount"
-  placeholder="max count"
-  (change)="update()"
-/>
+<div class="data-field">
+  <label for="datasource">Data Source</label>
+  <select [(ngModel)]="settings.id" id="datasource" name="datasource" (change)="update()">
+    @for (item of dynamicDataService.dynamicData; track item.id) {
+      <option [value]="item.id">{{ item.displayName }}</option>
+    }
+  </select>
+</div>
+<div class="data-field">
+  <label for="skipcount">Skip count</label>
+  <input
+    type="number"
+    [(ngModel)]="settings.skipCount"
+    id="skipcount"
+    name="skipCount"
+    (change)="update()"
+  />
+</div>
+<div class="data-field">
+  <label for="maxResultCount">Max result count</label>
+  <input
+    type="number"
+    [(ngModel)]="settings.maxResultCount"
+    id="maxResultCount"
+    name="maxResultCount"
+    (change)="update()"
+  />
+</div>
