--- a/projects/page-builder/src/sources/collection-item/collection-item.component.html
+++ b/projects/page-builder/src/sources/collection-item/collection-item.component.html
@@ -1,4 +1,11 @@
-<p>collection-item works!</p>
-{{ pageItem.id }}
-
-<p>DataSource: {{ pageItem.dataSource?.id }}</p>
+@if (pageItem.template) {
+  {{ list.length }}
+  @if (list.length == 0 || !pageItem.dataSource || !pageItem.dataSource.maxResultCount) {
+    <div class="ngx-page-alert info">View setting for set data source and filters</div>
+  }
+  <div class="collection-container">
+    @for (item of list; track $index) {
+      <item-generator [template]="pageItem.template"></item-generator>
+    }
+  </div>
+}
