feat: add products dynamic data and enhance text binding with reset button

--- a/projects/page-builder/src/components/text-binding/text-binding.component.html
+++ b/projects/page-builder/src/components/text-binding/text-binding.component.html
@@ -5,6 +5,11 @@
     [list]="collectionDsList"
     (selectedKey)="onChangeCollectionKey($event)"
   ></data-source-selector>
+  @if (item.dataSource) {
+    <button type="button" (click)="item.dataSource.binding = ''; onChangeCollectionKey([])">
+      X
+    </button>
+  }
 }
 
 <div>
