--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -4,7 +4,7 @@
 // Learn more about theming and how to use it for your application's
 // custom components at https://material.angular.dev/guide/theming
 @use '@angular/material' as mat;
-@use '../../../node_modules/ngx-drag-drop-kit/assets/styles.css';
+@use '../../page-builder/src/assets/style.scss';
 
 html {
   @include mat.theme(
