--- a/projects/page-builder/src/components/block-layouts/block-layouts.component.html
+++ b/projects/page-builder/src/components/block-layouts/block-layouts.component.html
@@ -42,7 +42,7 @@
               }
             </button>
           }
-          <span>{{ item.tag }}</span>
+          <span>{{ item.tag || item.el?.tagName }}</span>
         </div>
         @if (item.children && item.children.length > 0) {
           <ng-container
