--- a/projects/page-builder/src/sources/collection-item/collection-item.component.html
+++ b/projects/page-builder/src/sources/collection-item/collection-item.component.html
@@ -1,5 +1,10 @@
 @if (pageItem.template) {
-  @if (templateList.length == 0 || !pageItem.dataSource || !pageItem.dataSource.maxResultCount) {
+  @if (
+    !pageItem.children ||
+    !pageItem.children.length ||
+    !pageItem.dataSource ||
+    !pageItem.dataSource.maxResultCount
+  ) {
     <div class="ngx-page-alert info">View setting for set data source and filters</div>
   }
   <div class="collection-container" #collectionContainer></div>
