change svg icons to files

--- a/projects/page-builder/src/lib/page-builder.scss
+++ b/projects/page-builder/src/lib/page-builder.scss
@@ -44,7 +44,8 @@
       cursor: pointer;
       transform: scale(1.1);
     }
-    svg {
+    svg,
+    img {
       fill: var(--tools-fg);
     }
   }
