--- a/projects/page-builder/src/sources/hero-table/hero-table.component.html
+++ b/projects/page-builder/src/sources/hero-table/hero-table.component.html
@@ -1,13 +1,29 @@
-<div class="hero-table-wrapper">
+<div class="hero-table-wrapper" #wrapper>
   <div class="table-container" #tableContainer></div>
-  <div class="table-toolbar">
-    <button class="btn-icon" (click)="addRow($event)" title="Add Row">
-      <span>➕ Row</span>
+
+  <div class="table-toolbar" #toolbar [class.hide]="!selectedCell">
+    <button class="btn-icon" (click)="addRow($event, true)" title="Insert row after">
+      <svg Icon="assets/icons/table-insert-row-after.svg"></svg>
     </button>
-    <button class="btn-icon" (click)="addColumn($event)" title="Add Column">
-      <span>➕ Column</span>
+    <button class="btn-icon" (click)="addRow($event)" title="Insert row above">
+      <svg Icon="assets/icons/table-insert-row-above.svg"></svg>
+    </button>
+    <button class="btn-icon" (click)="deleteRow($event)" title="Delete row">
+      <svg Icon="assets/icons/table-delete-row.svg"></svg>
+    </button>
+
+    <button class="btn-icon" (click)="addColumn($event, true)" title="Insert column after">
+      <svg Icon="assets/icons/table-insert-column-after.svg"></svg>
+    </button>
+    <button class="btn-icon" (click)="addColumn($event)" title="Insert column before">
+      <svg Icon="assets/icons/table-insert-column-before.svg"></svg>
+    </button>
+    <button class="btn-icon" (click)="deleteColumn($event)" title="Delete column">
+      <svg Icon="assets/icons/table-delete-column.svg"></svg>
     </button>
   </div>
 </div>
-
-<pre>{{ selectedCell | json }}</pre>
+<pre>
+  col: {{ selectedCell?.colIndex }}
+  row: {{ selectedCell?.rowIndex }}
+</pre>
