--- a/projects/page-builder/src/sources/hero-table/hero-table.component.scss
+++ b/projects/page-builder/src/sources/hero-table/hero-table.component.scss
@@ -23,6 +23,8 @@ table.ngx-hero-table {
   color: var(--side-config-fg);
   padding: 5px 15px;
   border-radius: 5px;
+  display: flex;
+  min-width: max-content;
   &.hide {
     display: none;
   }
@@ -30,11 +32,20 @@ table.ngx-hero-table {
     background: none;
     color: inherit;
     border: none;
+    flex-shrink: 0;
     &:hover {
       background: color-mix(in srgb, var(--side-config-bg), #000 60%);
     }
   }
   svg {
     fill: var(--side-config-fg);
+    width: 24px;
+    height: 24px;
   }
+}
+
+.selection-range {
+  position: absolute;
+  outline: 2px solid #ff8900;
+  pointer-events: none;
 }
