imporment merge in hero table

--- a/projects/page-builder/src/sources/hero-table/hero-table.component.html
+++ b/projects/page-builder/src/sources/hero-table/hero-table.component.html
@@ -35,6 +35,10 @@
 
   <div class="selection-range" #selectionRange></div>
 </div>
+
+<div class="ngx-page-alert info">
+  Merge cell: First select the cell, then hold down the Shift key and click on the second cell.
+</div>
 <pre>
   col: {{ firstSelectedCell?.colIndex }}
   row: {{ firstSelectedCell?.rowIndex }}
