feat: Update ngx-page-text-info styles and improve table row deletion logic

--- a/projects/page-builder/src/sources/hero-table/hero-table.component.html
+++ b/projects/page-builder/src/sources/hero-table/hero-table.component.html
@@ -37,7 +37,7 @@
   <div class="selection-range" #selectionRange></div>
 </div>
 
-<div class="ngx-page-alert info">
+<div class="ngx-page-text-info">
   🛈 Merge cell: First select the cell, then hold down the Shift key and click on the second cell.
 </div>
 <pre>
