--- a/projects/page-builder/src/sources/hero-table/hero-table.component.scss
+++ b/projects/page-builder/src/sources/hero-table/hero-table.component.scss
@@ -51,7 +51,7 @@ table.ngx-hero-table {
   pointer-events: none;
 }
 
-ngx-page-preview {
+.hero-table-wrapper {
   td,
   th {
     border: #000 solid 1px;
