--- a/projects/page-builder/src/controls/beckground-control/background-control.component.html
+++ b/projects/page-builder/src/controls/beckground-control/background-control.component.html
@@ -62,9 +62,9 @@
         <th colspan="2" align="start">Background Properties</th>
       </tr>
 
-      <!-- Color -->
+      <!-- Background Color -->
       <tr *ngIf="mode.includes('color')">
-        <td><label for="background-color">Color:</label></td>
+        <td><label for="background-color">Background Color:</label></td>
         <td>
           <input
             id="background-color"
@@ -145,6 +145,22 @@
             <option value="repeat-x">Repeat X</option>
             <option value="repeat-y">Repeat Y</option>
           </select>
+        </td>
+      </tr>
+
+      <!-- Color -->
+      <tr>
+        <td><label for="color">Color:</label></td>
+        <td>
+          <input
+            id="color"
+            class="input-color"
+            ngxInputColor
+            [simpleMode]="true"
+            [(ngModel)]="color"
+            (ngModelChange)="update()"
+          />
+          <span class="preview" [style.background]="color"></span>
         </td>
       </tr>
     </tbody>
